--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       width: 50px;
       height: auto;
       margin-bottom: -25px;
-      z-index: 3; /* Coloca acima do container */
+      z-index: 3;
       position: relative;
     }
 
@@ -108,7 +108,9 @@
     <div class="container">
       <div class="mensagem-inscricao">Clique no botão abaixo e realize sua inscrição</div>
       <img src="https://i.imgur.com/0OrsMZF.png" alt="Logo" class="logo">
-      <button class="btn-inscricao">INSCREVA-SE CLICANDO AQUI</button>
+      <a href="../chat" target="_blank">
+        <button class="btn-inscricao">INSCREVA-SE CLICANDO AQUI</button>
+      </a>
       <div class="termos">
         <a href="#">Termos de Uso</a> e <a href="#">Política de Privacidade</a>
       </div>
