--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@
     <div class="container">
       <div class="mensagem-inscricao">Clique no botão abaixo e realize sua inscrição</div>
       <img src="https://i.imgur.com/0OrsMZF.png" alt="Logo" class="logo">
-      <a href="../chat" target="_blank">
-        <button class="btn-inscricao">INSCREVA-SE CLICANDO AQUI</button>
-      </a>
+      <button class="btn-inscricao" onclick="window.location.href='../chat'">INSCREVA-SE CLICANDO AQUI</button>
       <div class="termos">
         <a href="#">Termos de Uso</a> e <a href="#">Política de Privacidade</a>
       </div>
